added functions for card

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> FEE - Boilerplate - Babel/Webpack/React </title>
+    <title> CC Validator </title>
     <link rel="stylesheet" href="styles/main.css" media="screen">
   </head>
   <body>
